--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>IdeaScan - AI 创业点子验证与商业分析工具</title>
+    <meta name="description" content="IdeaScan 是一款 AI 驱动的创业点子验证工具。通过多维度市场分析、用户画像生成、小红书数据洞察，助您快速评估商业可行性，发现下一个独角兽机会。" />
+    <meta name="author" content="IdeaScan Team" />
+    <meta name="keywords" content="AI创业, 需求验证, 商业分析, 市场调研, 小红书数据分析, 创业点子, IdeaScan" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="IdeaScan - 让 AI 帮你验证创业点子" />
+    <meta property="og:description" content="只需一句话，AI 深度分析市场规模、竞争格局与用户痛点。拒绝伪需求，从 IdeaScan 开始。" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://ideascan.ai" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@IdeaScan" />
+    <meta name="twitter:title" content="IdeaScan - AI 创业点子验证工具" />
+    <meta name="twitter:description" content="只需一句话，AI 深度分析市场规模、竞争格局与用户痛点。" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
